--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "@types/ping": "^0.4.1",
     "electron-serve": "^1.1.0",
     "electron-store": "^8.0.2",
-    "socket.io": "^4.5.1"
+    "socket.io": "^4.5.1",
+    "socket.io-client": "^4.5.1"
   },
   "devDependencies": {
     "@types/node": "^16.11.7",
